@@ -32,8 +32,8 @@ NOTE: sorry, this is very raw :)
 ************************* NEW FEATURES TO ADD: *************************
 
   - key is not saved to midi files
-  
   - when saving, don't delete current file, save to another location then swap
+  - copy/paste support in controller mode
   
  - tab exporter:
 		skip series of empty measures
@@ -98,14 +98,13 @@ NOTE: sorry, this is very raw :)
  ## crash when emptying tempo in control view [reported, not tested] 
  ## ram-zet, rip.midi : look at score for intro choir...
  
-* copy/paste not supported in controller mode (or at least disable them!)
- 
-+ some imported midis have an empty track 0 (linkin park - faint.mid)
- 
 + scons warning : 'install' is found inside 'uninstall' (fix commited, not tested)
 
 + when wait dialog appears, you can still edit tracks and do operations that may be harmful to current process.
     yet you can't make it modal otherwise the background process stops.
+
+- if a midi has control events in an empty track they might be removed during import (though what could go there? tempo events are already stored in sequence)
+- during midi import, if no track name is given, use "untitled" instead of leaving name empty 
 
 + linux: scons install fails from SVN because docs are not found
 + linux: no need to install icns files
@@ -158,11 +157,10 @@ NOTE: sorry, this is very raw :)
  MINOR / CLEANUP :
 - decide a naming convention for variables
  - some drums that are not standard drumset preview fine but dont play correctly (SFX and one other. bug in QT?)
+        I say bug in Qt since it also seems to affect songs made in other software
  - .aria files don't remember whether drums are minimized
  - .aria files don't remember docked tracks
- - trigger coreaudio note player at startup
- 
- - bug when repeatedly pressing play and space at the same time
+ - trigger coreaudio note player at startup?
  
  - FIXMEs
  - in .aria files, pitch should be midi pitch, not my reverse pitch
